--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -14,11 +14,11 @@ There has been little advancement on information pertaining to the stock structu
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
-## Ecosystem considerations
+## Ecosystem Considerations
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
-## Fishery description
+## Fishery Description
 
  This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
@@ -28,7 +28,7 @@ Since the 2017 assessment, catch restrictions for Yelloweye Rockfish have contin
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] and @sec-mgmt for additional information.
 
-## Management performance{#sec-mgmt}
+## Management Performance{#sec-mgmt}
 
 Yelloweye Rockfish removals have been substantially reduced since its designation as overfished in 2002 through a variety of management measures that eliminated retention in recreational fisheries, limited commercial retention, created broad spatial closures, and implemented new gear restrictions that reduced trawling in rocky habitats. Many of these restrictions remain in effect, though as Yelloweye Rockfish and other groundfish stocks have begun to rebuild, some management measures have been modified or removed in recent years. These include some additional allocations to recreational fisheries that remain constrained by Yelloweye Rockfish estimated discard mortality, the recent removal of the Yelloweye \gls{rca} for the trawl sector off of California and Oregon, and eliminating some gear restrictions in the RCAs for the non-trawl sector. 
 
