--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -89,21 +89,21 @@ Two fishery-dependent indices of abundance were updated with new data and up-to-
 
 The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data were obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fathom buffer). Additionally, years with extremely low sample sizes (< 50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fathom buffer). Additionally, years with extremely low sample sizes (< 50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish (@tbl-yelloweye_percent_pos_ORFS). 
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP]) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP] to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (@tbl-yelloweye_model_selection_ORFS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@fig-ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
 #### Oregon ORBS Dockside (release only) CPUE, 2004-2024
 
 The \gls{orbs} dockside index for Oregon was updated for this assessment. CPUE, expressed in terms of fish per angler-hour, was calculated by multiplying the number of anglers and the total trip time, minus the boat type-specific travel time. The database contains information on released fish by species (number of angler-reported released fish), effort (angler hours), sample location (port where data were collected), date, bag limits and other relevant regulations, boat type (charter or private), and trip type (e.g., bottom associated fish). 
 
-The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
+The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% (@tbl-yelloweye_percent_pos_ORBS).
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port, and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (@tbl-yelloweye_model_selection_ORBS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0) [@Anderson_2024_SRP]. To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
 
 ## Fishery-Independent Data
 
-Two sources of fishery-independent data were updated: the West Coast Groundfish Bottom Trawl Survey and the \gls{iphc} Longline survey. 
+Two sources of fishery-independent data were updated: the \gls{indexwc} and the \gls{iphc} Longline survey. 
 
 ### West Coast Groundfish Bottom Trawl Survey (WCGBTS)
 
@@ -115,17 +115,17 @@ The biomass estimates produced for this assessment using \gls{sdmtmb} are compar
 
 ### IPHC Setline Survey
 
-The \gls{iphc} has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (\gls{iphc} area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult Yelloweye Rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the \gls{iphc} methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
+The \gls{iphc} has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (\gls{iphc} area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and thus, those years are not used in the index. Rockfish bycatch, primarily Yelloweye, were recorded during this survey, although values for 1999 and 2001 are estimates based on sub-sampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed to sample Pacific Halibut, is similar to gear previously used in line fisheries targeting adult Yelloweye Rockfish. Some variability in sampling location is unavoidable due to wind and currents affecting gear deployment. This can result in different habitats accessed at each fixed location between years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
 
-New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between \gls{iphc} and \gls{wdfw} from 2007-2009, 2013-2019 and 2021-2023. These stations are arranged around \gls{iphc} station 1082 (one of the more notable stations to encounter Yelloweye Rockfish). Only the summer months are considered here to match the time of year sampled by the \gls{iphc} survey. Survey sets at the \gls{wdfw} stations used three skates with 100 hooks each for most years, except for 2021 - 2023, where a total of four skates were used. Like the \gls{iphc} survey, effort was standardized to 100 hooks/skate. These stations were integrated into the \gls{iphc} stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered Yelloweye Rockfish (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
+New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between \gls{iphc} and \gls{wdfw} from 2007 - 2009, 2013 - 2019 and 2021 - 2023. These stations are set around \gls{iphc} station 1082 due to high capture probability of Yelloweye. Only summer months are considered to match the time of year sampled by the \gls{iphc} survey. Survey sets at the \gls{wdfw} stations used three skates with 100 hooks each for most years, except for 2021 - 2023, where a total of four skates were used. Like the \gls{iphc} survey, effort was standardized to 100 hooks/skate. These stations were integrated into the \gls{iphc} stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered Yelloweye Rockfish (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
 
-A log-normal generalized linear model with a log link in the \gls{sdmtmb} R package [@Anderson_2024_SRP] was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the sanity function in the \gls{sdmtmb} package. The updated index is compared to the index used in 2017 in @fig-IPHC_comparison. 
+A log-normal generalized linear model with a log link using \gls{sdmtmb} [@Anderson_2024_SRP] was used to standardize the CPUE. Model selection using AICc was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Acceptable diagnostics for the model were achieved, as evidenced by passing th sanity function in \gls{sdmtmb}. We compared the updated 2025 index to the 2017 index and found no change in trends (@fig-IPHC_comparison). 
 
 ### Fishery-Independent Length and Age Compositions
 
-Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for \gls{indexwc} were obtained using functions from the [nwfscSurvey](https://github.com/pfmc-assessments/nwfscSurvey) R package [@nwfscSurvey_package_2025]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
+Updated length and age composition data were available for the two updated fishery-independent surveys. Composition data from 2017 through 2024 were updated for \gls{indexwc} and were obtained using functions from the [nwfscSurvey](https://github.com/pfmc-assessments/nwfscSurvey) R package [@nwfscSurvey_package_2025]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
 
-A summary of sampling efforts (number of hauls and number of individual fish) in all surveys is provided in @tbl-sampling-effort-triennial and @tbl-sampling-effort-nwfsc. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific \gls{caal} frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the \gls{indexwc} and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2. 
+A summary of sampling efforts (number of hauls and number of individual fish) in both surveys is provided in @tbl-sampling-effort-triennial and @tbl-sampling-effort-nwfsc. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific \gls{caal} frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the \gls{indexwc} and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2 for the \gls{iphc}. 
 
 ## Biological Parameters and Data
 
@@ -152,7 +152,7 @@ $$
 Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye Rockfish,  @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
 
 ### Natural Mortality
-The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M$) which was estimated based on @hamel_method_2015.
+The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M = 0.044$) which was estimated based on @hamel_method_2015.
 
 ## Environmental and ecosystem data
 
